# reseach-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION-PLAN.md  PLAN-general-research-agent.md  README.md  pyproject.toml  rag-trace.json
.github/workflows/: ci.yml
knowledge/: comparative-research-axis-decomposition.md  multi-agent-synthesis-dependency-fix.md  research-provenance-handoff.md  research-stale-session-revalidation.md  resumed-session-stale-context-refresh.md  subagent-handoff-attribution-fix.md
research_agent/: Herness Engi  __init__.py  __main__.py  cli.py  collectors.py  intake.py  interactive.py  orchestrator.py  parsing.py  planner.py  report.py  session.py  store.py  synthesis.py  tracing.py  types.py  verifier.py
tests/: conftest.py  test_cli.py  test_collectors.py  test_freshness.py  test_harness.py  test_intake.py  test_interactive.py  test_orchestrator.py  test_planner.py  test_report.py  test_session.py  test_store.py  test_synthesis.py  test_tracing.py  test_types.py  test_verifier.py
